# ai-assesment

./: .env.example  .gitignore  ANSWERS.md  DESIGN.md  README.md  pyproject.toml
section2/: __init__.py  config.py  embeddings.py  evaluate.py  generator.py  ingest.py  pipeline.py  retriever.py
section2/data/: eval_qa.json  eval_report.json
section3/: __init__.py  classifier.py  data_builder.py  evaluate.py  generate_data.py  test_classifier.py  train.py
section3/data/: eval.json  eval_report.json  train.json
tests/: test_section2.py
